# address_crm

./: .env.example  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  parser.rs  query.rs
core/tests/: mock.rs  prepare.rs
data/: address.db  address.tsv
entity/: Cargo.toml
entity/src/: address.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230115_1120_create_address_table.rs  m20230118_1922_create_search_index.rs
src/: main.rs
src/migration/: m20230115_1120_create_address_table.rs  mod.rs
